# chronobid

./: .devenv.flake.nix  .gitignore  README.md  configuration.nix  deploy.sh  devenv.nix  devenv.yaml  flake.nix  main.tf  nixaws
chronobid/: API.md  chronobid.cabal  default.nix
chronobid/app/: Docs.hs  Main.hs
chronobid/data/: orders.csv
chronobid/server/: Main.hs  OrderBookServer.hs
chronobid/server/frontend/: docs.html  index.html  orderbook.html
chronobid/src/API/: OrderBookAPI.hs
chronobid/src/Models/: Order.hs  OrderBook.hs  Trade.hs
chronobid/src/OrderMatcher/: Matcher.hs
chronobid/test/: Main.hs  TestSampleFiles.hs
