cabal-version: 3.0
name:          chronobid
version:       0.1.0.0
license:       MIT
build-type:    Simple

common warnings
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions: NoStarIsType
  build-depends:
    , aeson
    , base            ^>=4.18.2.1
    , bytestring
    , cassava         >=0.5.3.0
    , filepath
    , fmt
    , servant
    , servant-docs
    , servant-server
    , stm
    , text
    , time
    , uuid
    , uuid-types
    , vector

library
  import:          warnings
  hs-source-dirs:  src
  exposed-modules:
    API.OrderBookAPI
    Models.Order
    Models.OrderBook
    Models.Trade
    OrderMatcher.Matcher

executable exe
  import:         warnings
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  chronobid

executable docs
  import:           warnings
  hs-source-dirs:   app
  main-is:          Docs.hs
  build-depends:
    , aeson
    , base
    , chronobid
    , servant
    , servant-docs
    , text
    , time
    , uuid

  default-language: Haskell2010

executable server
  import:         warnings
  main-is:        Main.hs
  hs-source-dirs: server
  other-modules:  OrderBookServer
  build-depends:
    , chronobid
    , directory
    , wai
    , wai-extra
    , warp

test-suite matcher-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:    TestSampleFiles
  build-depends:
    , base
    , chronobid
    , directory
    , filepath
    , fmt
    , tasty
    , tasty-hunit
    , time
    , uuid
    , vector

  default-language: Haskell2010
